--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     </header>
     <nav>
       <ul>
-        <li class="start">Before</li>
-        <li class="middle">Compare</li>
-        <li class="end">After</li>
+        <li><button type="button" class="start">Before</button></li>
+        <li><button type="button" class="middle">Compare</button></li>
+        <li><button type="button" class="end">After</button></li>
       </ul>
     </nav>
 
@@ -26,6 +26,10 @@
       </div>
       <div id="drag"></div>
     </section>
+
+    <footer>
+      <p>Copyright &copy; 2018, All Rights reserve by AP.</p>
+    </footer>
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
