--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
     <section id="container">
       <div class="view after">
-       <img src="img/island.jpg" alt="bottle">
+       <img src="img/paris.jpeg" alt="paris">
       </div>
       <div class="view before">
-       <img src="img/island.jpg" alt="bottle">
+       <img src="img/paris.jpeg" alt="paris">
       </div>
       <div id="drag"></div>
     </section>
