--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Image Viewer</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
   </head>
   <body>
     <header>
@@ -18,11 +19,11 @@
     </nav>
 
     <section id="container">
-      <div class="view after">
-       <img src="img/paris.jpeg" alt="paris">
+      <div class="view after slide">
+       <img id="paris"src="img/paris.jpeg" alt="eiffel towel">
       </div>
-      <div class="view before">
-       <img src="img/paris.jpeg" alt="paris">
+      <div class="view before slide">
+        <img id="paris"src="img/paris.jpeg" alt="eiffel towel">
       </div>
       <div id="drag"></div>
     </section>
